--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "i18next": "^24.2.0",
+    "lucide-react-native": "^0.469.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.0",
