fix bookmark function2

--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.6.6",
     "@expo/vector-icons": "^14.0.2",
+    "@freakycoder/react-native-bounceable": "^1.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^1.35.7",
     "expo": "~52.0.23",
+    "expo-auth-session": "~6.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -52,11 +54,11 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
     "i18next": "^24.2.0",
-    "lucide-react-native": "^0.469.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.0",
     "react-native": "0.76.5",
+    "react-native-androw": "^0.0.34",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
