--- a/package.json
+++ b/package.json
@@ -36,29 +36,29 @@
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^1.35.7",
     "expo": "~52.0.23",
-    "expo-auth-session": "~6.0.1",
-    "expo-blur": "~14.0.1",
+    "expo-auth-session": "~6.0.2",
+    "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.3",
+    "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.4",
     "expo-image-picker": "^16.0.4",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-localization": "~16.0.0",
-    "expo-router": "~4.0.15",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.4",
+    "expo-localization": "~16.0.1",
+    "expo-router": "~4.0.16",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "firebase": "^11.1.0",
     "i18next": "^24.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.0",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-androw": "^0.0.34",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
@@ -78,7 +78,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "~29.7.0",
-    "jest-expo": "^52.0.0",
+    "jest-expo": "~52.0.3",
     "patch-package": "^8.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
