--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     }
   },
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -31,15 +31,16 @@
     "@expo/vector-icons": "^14.0.2",
     "@freakycoder/react-native-bounceable": "^1.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^1.35.7",
-    "expo": "~52.0.23",
+    "expo": "~52.0.25",
     "expo-auth-session": "~6.0.2",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
+    "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
     "expo-image-picker": "^16.0.4",
@@ -65,9 +66,11 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.3.0",
     "react-native-pager-view": "6.5.1",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
