--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^1.35.7",
-    "expo": "~52.0.25",
+    "expo": "^52.0.26",
     "expo-auth-session": "~6.0.2",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.3",
@@ -81,6 +81,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "expo-cli": "^6.3.10",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.3",
     "patch-package": "^8.0.0",
