--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
     "web": {
       "name": "Fahrgut",
       "bundler": "metro",
-      "output": "static"
+      "output": "server"
     },
     "plugins": [
       "expo-router",
