--- a/package.json
+++ b/package.json
@@ -35,35 +35,35 @@
     "@expo/webpack-config": "^19.0.1",
     "@freakycoder/react-native-bounceable": "^1.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^1.35.7",
-    "expo": "^52.0.26",
-    "expo-auth-session": "~6.0.2",
-    "expo-blur": "~14.0.2",
+    "expo": "^52.0.35",
+    "expo-auth-session": "~6.0.3",
+    "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
-    "expo-image": "~2.0.4",
-    "expo-image-picker": "^16.0.4",
+    "expo-image": "~2.0.5",
+    "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.4",
+    "expo-linking": "~7.0.5",
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.16",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.20",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.1",
-    "expo-system-ui": "~4.0.7",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.1.0",
     "i18next": "^24.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.0",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-androw": "^0.0.34",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
@@ -76,7 +76,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "jest-expo": "~52.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -86,7 +87,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "expo-cli": "^6.3.10",
     "jest": "~29.7.0",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.4",
     "patch-package": "^8.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
