--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "expo-localization": "~16.0.1",
     "expo-router": "~4.0.16",
     "expo-secure-store": "~14.0.1",
+    "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -78,6 +79,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-tts": "^4.1.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
